# oe-alliance-e2-skindefault

./: configure.ac  skin_default.xml
skin_default/: Makefile.am
skin_default/LCDIcons/: Makefile.am
skin_default/buttons/: Makefile.am
skin_default/icons/: Makefile.am
skin_default/menu/: Makefile.am
skin_default/skin_default/: Makefile.am
skin_default/sysinfo/: Makefile.am
