SUBDIRS = LCDIcons buttons countries epg extensions icons infobar piconbg screens sysinfo menu skin_default

installdir = $(datadir)/enigma2/skin_default
dist_install_DATA = arrowdown.png \
    arrowup.png \
    bar_ber.png \
    bar_snr.png \
    border_eventinfo.png \
    div-h.png \
    div-v.png \
    epg_more.png \
    epg_next.png \
    epg_now.png \
    lcd_picon_default.png \
    no_coverArt.png \
    noprev.png \
    overscan.png \
    picon_default.png \
    position_arrow.png \
    position_pointer.png \
    position_pointer2.png \
    prev.png \
    progress_bg.png \
    progress_big.png \
    progress_small.png \
    rc.png \
    rcold.png \
    skin.xml \
    slider_back.png \
    slider.png \
    testscreen.png \
    vkey_all.png \
    vkey_backspace.png \
    vkey_bg.png \
    vkey_blue.png \
    vkey_clr.png \
    vkey_enter.png \
    vkey_esc.png \
    vkey_first.png \
    vkey_green.png \
    vkey_icon.png \
    vkey_last.png \
    vkey_left.png \
    vkey_ok.png \
    vkey_red.png \
    vkey_right.png \
    vkey_sel.png \
    vkey_shift.png \
    vkey_shift0.png \
    vkey_shift1.png \
    vkey_shift2.png \
    vkey_shift3.png \
    vkey_shift_sel.png \
    vkey_space.png \
    vkey_space_alt.png \
    vkey_text.png \
    vkey_yellow.png \
    yellow_circle23x23.png
